--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,4 @@ version = "0.1.0"
 [deps]
 BioSequences = "7e6ae17a-c86d-528c-b3b9-7f778a29fe59"
 CircularArrays = "7a955b69-7140-5f4e-a0ed-f168c5e2e749"
+SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
